Revert "tests/Makefile.am: remove status-request-revoked test"
This reverts commit 3a51db329317898929727911cf29b467d9e6d645.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -216,7 +216,7 @@ ctests += mini-record-2 simple gnutls_hmac_fast set_pkcs12_cred cert certuniquei
 	 resume-with-stek-expiration resume-with-previous-stek rawpk-api \
 	 tls-record-size-limit-asym dh-compute ecdh-compute sign-verify-data-newapi \
 	 sign-verify-newapi sign-verify-deterministic iov aead-cipher-vec \
-	 tls13-without-timeout-func buffer \
+	 tls13-without-timeout-func buffer status-request-revoked \
 	 set_x509_ocsp_multi_cli kdf-api keylog-func \
 	 dtls_hello_random_value tls_hello_random_value
 
